--- a/portfolio.html
+++ b/portfolio.html
@@ -265,8 +265,23 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscription">
+                <p>Подпишитесь на рассылку</p>
+                <form>
+                    <label>
+                        <input class="subscription-input" type="email" name="email" placeholder="E-mail" />
+                    </label>
+                    <button class="subscription-button" type="submit">
+                        Подписаться
+                        <svg class="subscription-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
+    
 </body>
         
 </html>
